tests/baselines/reference/indexerSignatureWithRestParam.errors.txt
==== tests/cases/compiler/indexerSignatureWithRestParam.ts (2 errors) ====
    interface I {
        [...x]: string;
         ~~~~
!!! error TS1017: Index signatures cannot have rest parameters.
    }
    
    class C {
        [...x]: string
         ~~~~
!!! error TS1017: Index signatures cannot have rest parameters.
    }